Fixed text alignment

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -24,6 +24,7 @@
   }
 
   .page__inner-wrap {
+    text-align:justify;
     @include full();
 
     .page__content,
